--- a/grupo7-p2-tads/bin/.gitignore
+++ b/grupo7-p2-tads/bin/.gitignore
@@ -1,3 +1,4 @@
+/uy/
 /TestBST.class
 /TestHeaps.class
 /TestLista.class
@@ -5,4 +6,4 @@
 /TestQueue.class
 /TestStack.class
 /TestStackWArray.class
-/uy/
+/TestHashCerrado.class
